--- a/fraud.html
+++ b/fraud.html
@@ -504,11 +504,6 @@
                       class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Inbox</a>
                   </li>
                   <li>
-                    <a href="/"
-                      class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Live
-                      Chat</a>
-                  </li>
-                  <li>
                     <a href="/email.html"
                       class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Email</a>
                   </li>
@@ -606,7 +601,7 @@
       </aside>
 
       <!-- Fraud Page -->
-      <main class="p-4 md:ml-64 min-h-screen pt-20">
+      <section class="p-4 md:ml-64 min-h-screen pt-20">
         <div class="flex flex-col bg-gray-50 dark:bg-dark100 rounded-lg min-h-screen">
           <h1 class="text-xl lg:text-3xl font-medium text-primary tracking-tight mb-10">
             Fraud
@@ -784,7 +779,7 @@
             </span>
           </div>
         </div>
-      </main>
+      </section>
 
     </div>
   </main>
