--- a/user-settings.html
+++ b/user-settings.html
@@ -800,7 +800,7 @@
           <td class="px-6 py-4 text-gray-900 dark:text-white">${log.access}</td>
           <td class="px-6 py-4 text-gray-900 dark:text-white">
             <button data-modal-target="popup-modal" data-modal-toggle="popup-modal"
-                        class="text-gray-600 text-xs bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 font-medium rounded-lg text-sm px-4 py-2 me-2">Delete</button>
+                        class="w-fit truncate text-white font-bold shadow hover:scale-[1.2] rounded-full px-5 py-2 bg-rose-800 me-2">Delete</button>
           </td>
         </tr>
 
