--- a/inactive-numbers.html
+++ b/inactive-numbers.html
@@ -814,7 +814,7 @@
           <td class="px-6 py-4 text-gray-900 dark:text-white capitalize">${log.status}</td>
           <td class="px-6 py-4 text-gray-900 dark:text-white">
             <button type="button"
-                        class="text-gray-600 text-xs bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 font-medium rounded-lg text-sm px-4 py-2 me-2">Delete Account</button>
+                        class="w-fit truncate text-white font-bold shadow hover:scale-[1.2] rounded-full px-5 py-2 bg-rose-800 me-2">Delete</button>
           </td>
         </tr>
 
