--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
 
             </ul>
 
-            <a href="/"
+            <a href="/login.html"
               class="flex items-center justify-between p-2 text-base font-medium text-gray-900 rounded-lg dark:text-white hover:bg-rose-600 hover:text-white group border-t border-yellow-500 hover:border-none my-8 lg:my-0">
               <span class="font-semibold text-base">Logout</span>
               <svg xmlns="http://www.w3.org/2000/svg"
