--- a/add-user.html
+++ b/add-user.html
@@ -65,24 +65,9 @@
                         <img src="https://res.cloudinary.com/dyvmtgjer/image/upload/v1717864716/pnl-logo_at49qu.png"
                             class="mr-3 h-8 lg:h-10" alt="loading" />
                         <span class="-ms-2 self-center text-2xl font-medium whitespace-nowrap text-primary">PNL</span>
-                        <form action="#" method="GET" class="hidden md:block md:pl-2">
-                            <label for="topbar-search" class="sr-only">Search</label>
-                            <div class="relative md:w-64 md:w-96">
-                                <div class="flex absolute inset-y-0 left-0 items-center pl-3 pointer-events-none">
-                                    <svg class="w-5 h-5 text-gray-500 dark:text-gray-400" fill="currentColor"
-                                        viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                                        <path fill-rule="evenodd" clip-rule="evenodd"
-                                            d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z">
-                                        </path>
-                                    </svg>
-                                </div>
-                                <input type="text" name="email" id="topbar-search"
-                                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary truncate focus:border-primary block w-full pl-10 p-2.5 dark:bg-dark300 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary dark:focus:border-primary"
-                                    placeholder="Search" />
-                            </div>
-                        </form>
                     </div>
                     <div class="flex items-center lg:order-2">
+                        <!-- theme toggle -->
                         <button id="theme-toggle" type="button"
                             class="text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none rounded-lg text-sm p-2.5">
                             <svg id="theme-toggle-dark-icon" class="hidden w-5 h-5" fill="currentColor"
@@ -96,6 +81,26 @@
                                     fill-rule="evenodd" clip-rule="evenodd"></path>
                             </svg>
                         </button>
+
+                        <!-- Desktop search -->
+                        <form action="#" method="GET" class="hidden md:block">
+                            <div
+                                class="p-4 overflow-hidden w-[40px] h-[40px] hover:w-[270px] hover:cursor-pointer rounded-full flex group justify-start items-center hover:duration-300 duration-300">
+                                <div class="flex items-center justify-center">
+                                    <svg aria-hidden="true" class="w-6 h-6 text-gray-500 me-2" fill="currentColor"
+                                        id="Isolation_Mode" data-name="Isolation Mode" viewBox="0 0 20 20"
+                                        xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                                        <path clip-rule="evenodd" fill-rule="evenodd"
+                                            d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z">
+                                        </path>
+                                    </svg>
+                                </div>
+                                <input type="text"
+                                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary truncate focus:border-primary block w-full pl-2 p-2 dark:bg-dark300 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary dark:focus:border-primary" />
+                            </div>
+
+                        </form>
+                        <!-- Mobile dearch -->
                         <button type="button" data-drawer-toggle="drawer-navigation" aria-controls="drawer-navigation"
                             class="p-2 mr-1 text-gray-500 rounded-lg md:hidden hover:text-gray-900 hover:bg-gray-100 dark:text-gray-400 dark:hover:text-white dark:hover:bg-gray-700">
                             <span class="sr-only">Toggle search</span>
@@ -121,7 +126,7 @@
                         </button>
 
                         <!-- Dropdown menu -->
-                        <div class="hidden overflow-hidden my-4 max-w-80 lg:max-w-sm w-full w-full text-base list-none rounded divide-y divide-gray-100 shadow-lg dark:divide-gray-600 rounded-xl flex flex-col"
+                        <div class="hidden overflow-hidden my-4 max-w-80 lg:max-w-sm w-full w-full text-base list-none rounded divide-y divide-gray-100 -lg dark:divide-gray-600 rounded-xl flex flex-col"
                             id="settings-dropdown">
                             <div
                                 class="block py-2 px-4 text-base font-medium text-gray-700 bg-white dark:bg-dark200 dark:text-gray-300">
@@ -162,7 +167,7 @@
                             </svg>
                         </button>
                         <!-- Dropdown menu -->
-                        <div class="hidden overflow-hidden my-4 max-w-80 lg:max-w-sm w-full text-base list-none rounded divide-y divide-gray-100 shadow-lg dark:divide-gray-600 dark:bg-dark300 rounded-xl flex flex-col"
+                        <div class="hidden overflow-hidden my-4 max-w-80 lg:max-w-sm w-full text-base list-none rounded divide-y divide-gray-100 -lg dark:divide-gray-600 dark:bg-dark300 rounded-xl flex flex-col"
                             id="notification-dropdown">
                             <div
                                 class="block py-2 px-4 text-base font-medium text-gray-700 bg-white dark:bg-dark200 dark:text-gray-300">
@@ -298,7 +303,7 @@
                                 alt="user" />
                         </button>
                         <!-- Dropdown menu -->
-                        <div class="hidden z-50 my-4 w-56 text-base list-none bg-white rounded divide-y divide-gray-100 shadow dark:bg-dark300 dark:divide-gray-600 rounded-xl"
+                        <div class="hidden z-50 my-4 w-56 text-base list-none bg-white rounded divide-y divide-gray-100  dark:bg-dark300 dark:divide-gray-600 rounded-xl"
                             id="dropdown">
                             <div class="py-3 px-4">
                                 <span class="block text-sm font-semibold text-gray-900 dark:text-white">John Doe</span>
@@ -599,7 +604,7 @@
 
                         </ul>
 
-                        <a href="/"
+                        <a href="/login.html"
                             class="flex items-center justify-between p-2 text-base font-medium text-gray-900 rounded-lg dark:text-white hover:bg-rose-600 hover:text-white group border-t border-yellow-500 hover:border-none my-8 lg:my-0">
                             <span class="font-semibold text-base">Logout</span>
                             <svg xmlns="http://www.w3.org/2000/svg"
@@ -614,8 +619,9 @@
                 </div>
             </aside>
 
+
             <!--  Add User page -->
-            <main class="p-4 md:ml-64 h-auto pt-20">
+            <section class="p-4 md:ml-64 h-auto pt-20">
                 <div class="flex flex-col bg-gray-50 dark:bg-dark100 rounded-lg min-h-screen">
                     <h1 class="text-xl lg:text-3xl font-medium text-primary tracking-tight mb-10">
                         Add User
@@ -743,7 +749,7 @@
                         </form>
                     </div>
                 </div>
-            </main>
+            </section>
 
     </main>
     <script src="/js/app.js"></script>
