--- a/check-agent-model.html
+++ b/check-agent-model.html
@@ -614,7 +614,7 @@
       </aside>
 
       <!-- Agent Model Page -->
-      <main class="p-4 md:ml-64 min-h-screen pt-20">
+      <section class="p-4 md:ml-64 min-h-screen pt-20">
         <div class="flex flex-col bg-gray-50 dark:bg-dark100 rounded-lg min-h-screen">
           <h1 class="text-xl lg:text-3xl font-medium text-primary tracking-tight mb-10">
             Agent Model
@@ -678,7 +678,7 @@
             </span>
           </div>
         </div>
-      </main>
+      </section>
 
     </div>
   </main>
