--- a/phone-number.html
+++ b/phone-number.html
@@ -65,24 +65,9 @@
             <img src="https://res.cloudinary.com/dyvmtgjer/image/upload/v1717864716/pnl-logo_at49qu.png"
               class="mr-3 h-8 lg:h-10" alt="loading" />
             <span class="-ms-2 self-center text-2xl font-medium whitespace-nowrap text-primary">PNL</span>
-            <form action="#" method="GET" class="hidden md:block md:pl-2">
-              <label for="topbar-search" class="sr-only">Search</label>
-              <div class="relative md:w-64 md:w-96">
-                <div class="flex absolute inset-y-0 left-0 items-center pl-3 pointer-events-none">
-                  <svg class="w-5 h-5 text-gray-500 dark:text-gray-400" fill="currentColor" viewBox="0 0 20 20"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" clip-rule="evenodd"
-                      d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z">
-                    </path>
-                  </svg>
-                </div>
-                <input type="text" name="email" id="topbar-search"
-                  class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary truncate focus:border-primary block w-full pl-10 p-2.5 dark:bg-dark300 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary dark:focus:border-primary"
-                  placeholder="Search" />
-              </div>
-            </form>
           </div>
           <div class="flex items-center lg:order-2">
+            <!-- theme toggle -->
             <button id="theme-toggle" type="button"
               class="text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none rounded-lg text-sm p-2.5">
               <svg id="theme-toggle-dark-icon" class="hidden w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
@@ -96,6 +81,26 @@
                   fill-rule="evenodd" clip-rule="evenodd"></path>
               </svg>
             </button>
+
+            <!-- Desktop search -->
+            <form action="#" method="GET" class="hidden md:block">
+              <div
+                class="p-4 overflow-hidden w-[40px] h-[40px] hover:w-[270px] hover:cursor-pointer rounded-full flex group justify-start items-center hover:duration-300 duration-300">
+                <div class="flex items-center justify-center">
+                  <svg aria-hidden="true" class="w-6 h-6 text-gray-500 me-2" fill="currentColor" id="Isolation_Mode"
+                    data-name="Isolation Mode" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"
+                    aria-hidden="true">
+                    <path clip-rule="evenodd" fill-rule="evenodd"
+                      d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z">
+                    </path>
+                  </svg>
+                </div>
+                <input type="text"
+                  class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary truncate focus:border-primary block w-full pl-2 p-2 dark:bg-dark300 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary dark:focus:border-primary" />
+              </div>
+
+            </form>
+            <!-- Mobile dearch -->
             <button type="button" data-drawer-toggle="drawer-navigation" aria-controls="drawer-navigation"
               class="p-2 mr-1 text-gray-500 rounded-lg md:hidden hover:text-gray-900 hover:bg-gray-100 dark:text-gray-400 dark:hover:text-white dark:hover:bg-gray-700">
               <span class="sr-only">Toggle search</span>
@@ -122,7 +127,7 @@
 
             <!-- Dropdown menu -->
             <div
-              class="hidden overflow-hidden my-4 max-w-80 lg:max-w-sm w-full w-full text-base list-none rounded divide-y divide-gray-100 shadow-lg dark:divide-gray-600 rounded-xl flex flex-col"
+              class="hidden overflow-hidden my-4 max-w-80 lg:max-w-sm w-full w-full text-base list-none rounded divide-y divide-gray-100 -lg dark:divide-gray-600 rounded-xl flex flex-col"
               id="settings-dropdown">
               <div
                 class="block py-2 px-4 text-base font-medium text-gray-700 bg-white dark:bg-dark200 dark:text-gray-300">
@@ -164,7 +169,7 @@
             </button>
             <!-- Dropdown menu -->
             <div
-              class="hidden overflow-hidden my-4 max-w-80 lg:max-w-sm w-full text-base list-none rounded divide-y divide-gray-100 shadow-lg dark:divide-gray-600 dark:bg-dark300 rounded-xl flex flex-col"
+              class="hidden overflow-hidden my-4 max-w-80 lg:max-w-sm w-full text-base list-none rounded divide-y divide-gray-100 -lg dark:divide-gray-600 dark:bg-dark300 rounded-xl flex flex-col"
               id="notification-dropdown">
               <div
                 class="block py-2 px-4 text-base font-medium text-gray-700 bg-white dark:bg-dark200 dark:text-gray-300">
@@ -178,12 +183,14 @@
                       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                         stroke="currentColor" class="w-6 h-6">
                         <path stroke-linecap="round" stroke-linejoin="round"
-                          d="M12 9v3.75m9-.75a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9 3.75h.008v.008H12v-.008Z"></path>
+                          d="M12 9v3.75m9-.75a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9 3.75h.008v.008H12v-.008Z">
+                        </path>
                       </svg>
                     </div>
                     <div>
                       <p class="dark:text-white text-gray-900 text-sm">Info Window</p>
-                      <p class="text-gray-500 leading-tight">A fraud issue was detected on user PG1100011
+                      <p class="text-gray-500 leading-tight">A fraud issue was detected on user
+                        PG1100011
                         account.
                         Kindly look into
                         it</p>
@@ -204,12 +211,14 @@
                       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                         stroke="currentColor" class="w-6 h-6">
                         <path stroke-linecap="round" stroke-linejoin="round"
-                          d="M12 9v3.75m9-.75a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9 3.75h.008v.008H12v-.008Z"></path>
+                          d="M12 9v3.75m9-.75a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9 3.75h.008v.008H12v-.008Z">
+                        </path>
                       </svg>
                     </div>
                     <div>
                       <p class="dark:text-white text-gray-900 text-sm">Info Window</p>
-                      <p class="text-gray-500 leading-tight">A fraud issue was detected on user PG1100011
+                      <p class="text-gray-500 leading-tight">A fraud issue was detected on user
+                        PG1100011
                         account.
                         Kindly look into
                         it</p>
@@ -230,12 +239,14 @@
                       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                         stroke="currentColor" class="w-6 h-6">
                         <path stroke-linecap="round" stroke-linejoin="round"
-                          d="M12 9v3.75m9-.75a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9 3.75h.008v.008H12v-.008Z"></path>
+                          d="M12 9v3.75m9-.75a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9 3.75h.008v.008H12v-.008Z">
+                        </path>
                       </svg>
                     </div>
                     <div>
                       <p class="dark:text-white text-gray-900 text-sm">Info Window</p>
-                      <p class="text-gray-500 leading-tight">A fraud issue was detected on user PG1100011
+                      <p class="text-gray-500 leading-tight">A fraud issue was detected on user
+                        PG1100011
                         account.
                         Kindly look into
                         it</p>
@@ -256,12 +267,14 @@
                       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                         stroke="currentColor" class="w-6 h-6">
                         <path stroke-linecap="round" stroke-linejoin="round"
-                          d="M12 9v3.75m9-.75a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9 3.75h.008v.008H12v-.008Z"></path>
+                          d="M12 9v3.75m9-.75a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9 3.75h.008v.008H12v-.008Z">
+                        </path>
                       </svg>
                     </div>
                     <div>
                       <p class="dark:text-white text-gray-900 text-sm">Info Window</p>
-                      <p class="text-gray-500 leading-tight">A fraud issue was detected on user PG1100011
+                      <p class="text-gray-500 leading-tight">A fraud issue was detected on user
+                        PG1100011
                         account.
                         Kindly look into
                         it</p>
@@ -288,7 +301,7 @@
             </button>
             <!-- Dropdown menu -->
             <div
-              class="hidden z-50 my-4 w-56 text-base list-none bg-white rounded divide-y divide-gray-100 shadow dark:bg-dark300 dark:divide-gray-600 rounded-xl"
+              class="hidden z-50 my-4 w-56 text-base list-none bg-white rounded divide-y divide-gray-100  dark:bg-dark300 dark:divide-gray-600 rounded-xl"
               id="dropdown">
               <div class="py-3 px-4">
                 <span class="block text-sm font-semibold text-gray-900 dark:text-white">John Doe</span>
@@ -504,11 +517,6 @@
                       class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Inbox</a>
                   </li>
                   <li>
-                    <a href="/"
-                      class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Live
-                      Chat</a>
-                  </li>
-                  <li>
                     <a href="/email.html"
                       class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Email</a>
                   </li>
@@ -591,7 +599,7 @@
 
             </ul>
 
-            <a href="/"
+            <a href="/login.html"
               class="flex items-center justify-between p-2 text-base font-medium text-gray-900 rounded-lg dark:text-white hover:bg-rose-600 hover:text-white group border-t border-yellow-500 hover:border-none my-8 lg:my-0">
               <span class="font-semibold text-base">Logout</span>
               <svg xmlns="http://www.w3.org/2000/svg"
@@ -605,8 +613,9 @@
         </div>
       </aside>
 
+
       <!-- Phone Number Page -->
-      <main class="p-4 md:ml-64 h-auto pt-20">
+      <section class="p-4 md:ml-64 h-auto pt-20">
         <div class="flex flex-col bg-gray-50 dark:bg-dark100 rounded-lg min-h-screen">
           <h1 class="text-xl lg:text-3xl font-medium text-primary tracking-tight mb-10">
             Phone Number
@@ -678,7 +687,7 @@
             </table>
           </div>
         </div>
-      </main>
+      </section>
 
     </div>
   </main>
