--- a/agent-model.html
+++ b/agent-model.html
@@ -330,7 +330,6 @@
           </div>
         </div>
       </nav>
-
       <!-- Sidebar -->
       <aside
         class="fixed top-0 left-0 z-40 w-64 h-screen pt-14 transition-transform -translate-x-full bg-white border-r border-gray-200 md:translate-x-0 dark:bg-dark300 dark:border-dark100"
@@ -435,7 +434,7 @@
                   <li>
                     <a href="/game-record.html"
                       class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Game
-                      Record
+                      Log
                     </a>
                   </li>
 
@@ -486,7 +485,7 @@
                   </li>
                   <li>
                     <a href="/inactive-numbers.html"
-                      class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Inactice
+                      class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Inactive
                       Numbers</a>
                   </li>
                 </ul>
@@ -613,7 +612,6 @@
         </div>
       </aside>
 
-
       <!-- Agent Model Page -->
       <section class="p-4 md:ml-64 min-h-screen pt-20">
         <div class="flex flex-col bg-gray-50 dark:bg-dark100 rounded-lg min-h-screen">
@@ -710,7 +708,7 @@
                     <td class="px-6 py-4 text-gray-900 dark:text-white">
                     ${user.userid}
                     </td>
-                    <td class="px-6 py-4 text-gray-900 dark:text-white">
+                    <td class="px-6 py-4 text-gray-900 dark:text-white text-center">
                     ${user.number_of_invites}
                     </td>
                     <td class="px-6 py-4 text-gray-900 dark:text-white">
