--- a/check-agent-model.html
+++ b/check-agent-model.html
@@ -430,7 +430,7 @@
                   <li>
                     <a href="/game-record.html"
                       class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Game
-                      Record
+                      Log
                     </a>
                   </li>
 
@@ -481,7 +481,7 @@
                   </li>
                   <li>
                     <a href="/inactive-numbers.html"
-                      class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Inactice
+                      class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Inactive
                       Numbers</a>
                   </li>
                 </ul>
@@ -510,11 +510,6 @@
                   <li>
                     <a href="/inbox.html"
                       class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Inbox</a>
-                  </li>
-                  <li>
-                    <a href="/"
-                      class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Live
-                      Chat</a>
                   </li>
                   <li>
                     <a href="/email.html"
@@ -599,7 +594,7 @@
 
             </ul>
 
-            <a href="/"
+            <a href="/login.html"
               class="flex items-center justify-between p-2 text-base font-medium text-gray-900 rounded-lg dark:text-white hover:bg-rose-600 hover:text-white group border-t border-yellow-500 hover:border-none my-8 lg:my-0">
               <span class="font-semibold text-base">Logout</span>
               <svg xmlns="http://www.w3.org/2000/svg"
