--- a/fraud.html
+++ b/fraud.html
@@ -435,7 +435,7 @@
                   <li>
                     <a href="/game-record.html"
                       class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Game
-                      Record
+                      Log
                     </a>
                   </li>
 
@@ -486,7 +486,7 @@
                   </li>
                   <li>
                     <a href="/inactive-numbers.html"
-                      class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Inactice
+                      class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Inactive
                       Numbers</a>
                   </li>
                 </ul>
@@ -612,7 +612,6 @@
           </div>
         </div>
       </aside>
-
 
       <!-- Fraud Page -->
       <section class="p-4 md:ml-64 min-h-screen pt-20">
@@ -888,13 +887,13 @@
                     </td>
                     <td class="px-6 py-4 text-gray-900 dark:text-white">
                       <!-- Modal toggle -->
-                      <div class="flex items-center flex-wrap gap-2">
+                      <div class="flex items-center flex-wrap gap-1 lg:gap-2">
                         <a
                           href="#"
                           type="button"
                           data-modal-target="deductAmountModal"
                           data-modal-show="deductAmountModal"
-                          class="w-fit truncate text-white font-bold shadow hover:scale-[1.2] rounded-full px-5 py-2 bg-rose-800"
+                          class="w-fit truncate text-white font-medium lg:font-bold shadow hover:scale-[1.1] rounded-full px-5 py-2 bg-rose-800"
                           >Deduct Amount</a
                         >
                         <a
@@ -902,7 +901,7 @@
                           type="button"
                           data-modal-target="banUserModal"
                           data-modal-show="banUserModal"
-                          class="w-fit truncate text-white font-bold shadow hover:scale-[1.2] rounded-full px-5 py-2 bg-rose-800"
+                          class="w-fit truncate text-white font-medium lg:font-bold shadow hover:scale-[1.1] rounded-full px-5 py-2 bg-rose-800"
                           >Ban User</a
                         >
                         <a
@@ -910,7 +909,7 @@
                           type="button"
                           data-modal-target="deleteUser-modal"
                           data-modal-show="deleteUser-modal"
-                          class="w-fit truncate text-white font-bold shadow hover:scale-[1.2] rounded-full px-5 py-2 bg-rose-800"
+                          class="w-fit truncate text-white font-medium lg:font-bold shadow hover:scale-[1.1] rounded-full px-5 py-2 bg-rose-800"
                           >Delete User</a
                         >
                       </div>
