--- a/login.html
+++ b/login.html
@@ -89,7 +89,8 @@
                     <div class="flex items-center justify-between w-full">
                         <label for="remember" class="ms-2 text-xs text-gray-900 dark:text-gray-300">Remember
                             me</label>
-                        <a href="" class="ms-2 text-xs text-gray-900 dark:text-gray-300">Forgot password</a>
+                        <a href="/reset-password.html" class="ms-2 text-xs text-gray-900 dark:text-gray-300">Forgot
+                            password</a>
                     </div>
                 </div>
                 <button type="submit"
