--- a/unreg-number.html
+++ b/unreg-number.html
@@ -435,7 +435,7 @@
                   <li>
                     <a href="/game-record.html"
                       class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Game
-                      Record
+                      Log
                     </a>
                   </li>
 
@@ -486,7 +486,7 @@
                   </li>
                   <li>
                     <a href="/inactive-numbers.html"
-                      class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Inactice
+                      class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Inactive
                       Numbers</a>
                   </li>
                 </ul>
@@ -825,7 +825,7 @@
           <td class="px-6 py-4 text-gray-900 dark:text-white">${log.otp}</td>
           <td class="px-6 py-4 text-gray-900 dark:text-white">
             <button data-modal-target="popup-modal" data-modal-toggle="popup-modal"
-                        class="w-fit truncate text-white font-bold shadow hover:scale-[1.2] rounded-full px-5 py-2 bg-rose-800 me-2">Delete</button>
+                        class="w-fit truncate text-white font-medium lg:font-bold shadow hover:scale-[1.2] rounded-full px-5 py-2 bg-rose-800 me-2">Delete</button>
           </td>
         </tr>
 
