--- a/user-details.html
+++ b/user-details.html
@@ -435,7 +435,7 @@
                   <li>
                     <a href="/game-record.html"
                       class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Game
-                      Record
+                      Log
                     </a>
                   </li>
 
@@ -486,7 +486,7 @@
                   </li>
                   <li>
                     <a href="/inactive-numbers.html"
-                      class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Inactice
+                      class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Inactive
                       Numbers</a>
                   </li>
                 </ul>
@@ -654,7 +654,7 @@
                 <tr
                   class="bg-white border-b dark:bg-dark200 dark:border-dark100 hover:bg-gray-50 dark:hover:bg-dark500">
                   <th scope="row" class="px-6 py-4">
-                    <div class="flex items-start gap-2">
+                    <div class="flex items-start gap-2 mmin-w-[200px]">
                       <img class="w-10 h-10 rounded-full object-cover object-center"
                         src="https://res.cloudinary.com/dyvmtgjer/image/upload/v1715243152/image1_r7ytfh.png"
                         alt="loading" />
@@ -666,7 +666,7 @@
                           <span class="font-semibold">ID: </span>
                           102.87.33.177
                         </p>
-                        <p class="text-gray-500 dark:text-gray-400 font-normal">
+                        <!-- <p class="text-gray-500 dark:text-gray-400 font-normal">
                           <span class="font-semibold">Name: </span>Bryson
                           Tiller
                         </p>
@@ -681,7 +681,7 @@
                         <p class="text-gray-500 dark:text-gray-400 font-normal">
                           <span class="font-semibold">Email:</span>
                           brysontiller@gmail.com
-                        </p>
+                        </p> -->
                       </div>
                     </div>
                   </th>
@@ -693,7 +693,7 @@
                       </p>
                       <p class="text-gray-500 dark:text-gray-400">
                         <span class="font-semibold">Last Login Time:</span>
-                        2/28/2024, 12:!2pm
+                        2/28/2024, 12:12pm
                       </p>
                     </div>
                   </td>
@@ -714,36 +714,38 @@
                   </td>
                   <td class="px-6 py-2">
                     <!-- Modal toggle -->
-                    <div class="flex items-center flex-wrap gap-3 lg:gap-6">
+                    <div class="flex items-center flex-wrap gap-1 lg:gap-2">
                       <a href="#" type="button" data-modal-target="detailsModal" data-modal-show="detailsModal"
-                        class="w-fit truncate text-white font-bold shadow hover:scale-[1.2] rounded-full px-5 py-2 bg-purple-500">Details</a>
+                        class="w-fit truncate text-white font-medium lg:font-bold text-xs lg:text-sm shadow hover:scale-[1.1] rounded-full px-5 py-2 bg-purple-500">Details</a>
 
                       <a href="/game-record.html"
-                        class="w-fit truncate text-white font-bold shadow hover:scale-[1.2] rounded-full px-5 py-2 bg-purple-500">Gamelog</a>
+                        class="w-fit truncate text-white font-medium lg:font-bold text-xs lg:text-sm shadow hover:scale-[1.1] rounded-full px-5 py-2 bg-purple-500">Gamelog</a>
 
-                      <a href="#" type="button" data-modal-target="banUserModal" data-modal-show="banUserModal"
-                        class="w-fit truncate text-white font-bold shadow hover:scale-[1.2] rounded-full px-5 py-2 bg-rose-800">Ban
+                      <a href="#" type="button" data-modal-target="banUserModal" data-modal-show="banUserModal" class="w-fit truncate text-white font-medium lg:font-bold text-xs lg:text-sm
+font-medium lg:font-bold text-xs lg:text-sm shadow hover:scale-[1.1] rounded-full px-5 py-2 bg-rose-800">Ban
                         User</a>
                       <a href="#" type="button" data-modal-target="deductCoinModal" data-modal-show="deductCoinModal"
-                        class="w-fit truncate text-white font-bold shadow hover:scale-[1.2] rounded-full px-5 py-2 bg-rose-800">Deduct
+                        class="w-fit truncate text-white font-medium lg:font-bold text-xs lg:text-sm
+font-medium lg:font-bold text-xs lg:text-sm shadow hover:scale-[1.1] rounded-full px-5 py-2 bg-rose-800">Deduct
                         Coin</a>
                       <a href="#" type="button" data-modal-target="deductCashModal" data-modal-show="deductCashModal"
-                        class="w-fit truncate text-white font-bold shadow hover:scale-[1.2] rounded-full px-5 py-2 bg-rose-800">Deduct
+                        class="w-fit truncate text-white font-medium lg:font-bold text-xs lg:text-sm
+font-medium lg:font-bold text-xs lg:text-sm shadow hover:scale-[1.1] rounded-full px-5 py-2 bg-rose-800">Deduct
                         Cash</a>
-                      <a href="/recharge-log.html"
-                        class="w-fit truncate text-white font-bold shadow hover:scale-[1.2] rounded-full px-5 py-2 bg-blue-500">Recharge
+                      <a href="/recharge-log.html" class="w-fit truncate text-white font-medium lg:font-bold text-xs lg:text-sm
+font-medium lg:font-bold text-xs lg:text-sm shadow hover:scale-[1.1] rounded-full px-5 py-2 bg-blue-500">Recharge
                         Log</a>
 
-                      <a href="#" type="button" data-modal-target="addCashModal" data-modal-show="addCashModal"
-                        class="w-fit truncate text-white font-bold shadow hover:scale-[1.2] rounded-full px-5 py-2 bg-green-500">Add
+                      <a href="#" type="button" data-modal-target="addCashModal" data-modal-show="addCashModal" class="w-fit truncate text-white font-medium lg:font-bold text-xs lg:text-sm
+font-medium lg:font-bold text-xs lg:text-sm shadow hover:scale-[1.1] rounded-full px-5 py-2 bg-green-500">Add
                         Cash</a>
 
-                      <a href="/withdrawal-log.html"
-                        class="w-fit truncate text-white font-bold shadow hover:scale-[1.2] rounded-full px-5 py-2 bg-green-500">Withdrawal
+                      <a href="/withdrawal-log.html" class="w-fit truncate text-white font-medium lg:font-bold text-xs lg:text-sm
+font-medium lg:font-bold text-xs lg:text-sm shadow hover:scale-[1.1] rounded-full px-5 py-2 bg-green-500">Withdrawal
                         Log</a>
 
-                      <a href="#" type="button" data-modal-target="addCoinModal" data-modal-show="addCoinModal"
-                        class="w-fit truncate text-white font-bold shadow hover:scale-[1.2] rounded-full px-5 py-2 bg-green-500">Add
+                      <a href="#" type="button" data-modal-target="addCoinModal" data-modal-show="addCoinModal" class="w-fit truncate text-white font-medium lg:font-bold text-xs lg:text-sm
+font-medium lg:font-bold text-xs lg:text-sm shadow hover:scale-[1.1] rounded-full px-5 py-2 bg-green-500">Add
                         Coin</a>
                     </div>
                   </td>
