--- a/user-info.html
+++ b/user-info.html
@@ -435,7 +435,7 @@
                   <li>
                     <a href="/game-record.html"
                       class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Game
-                      Record
+                      Log
                     </a>
                   </li>
 
@@ -486,7 +486,7 @@
                   </li>
                   <li>
                     <a href="/inactive-numbers.html"
-                      class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Inactice
+                      class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Inactive
                       Numbers</a>
                   </li>
                 </ul>
@@ -666,7 +666,7 @@
                           <span class="font-semibold">ID: </span>
                           102.87.33.177
                         </p>
-                        <p class="text-gray-500 dark:text-gray-400 font-normal">
+                        <!-- <p class="text-gray-500 dark:text-gray-400 font-normal">
                           <span class="font-semibold">Name: </span>Bryson
                           Tiller
                         </p>
@@ -681,7 +681,7 @@
                         <p class="text-gray-500 dark:text-gray-400 font-normal">
                           <span class="font-semibold">Email:</span>
                           brysontiller@gmail.com
-                        </p>
+                        </p> -->
                       </div>
                     </div>
                   </th>
@@ -714,22 +714,22 @@
                   </td>
                   <td class="px-6 py-2">
                     <!-- Modal toggle -->
-                    <div class="flex items-center flex-wrap gap-3 lg:gap-6">
+                    <div class="flex items-center flex-wrap gap-1 lg:gap-2">
                       <a href="#" type="button" data-modal-target="detailsModal" data-modal-show="detailsModal"
-                        class="w-fit truncate text-white font-bold shadow hover:scale-[1.2] rounded-full px-5 py-2 bg-purple-500">Details</a>
+                        class="w-fit truncate text-white font-medium lg:font-bold shadow hover:scale-[1.1] rounded-full px-5 py-2 bg-purple-500">Details</a>
 
                       <a href="/game-record.html"
-                        class="w-fit truncate text-white font-bold shadow hover:scale-[1.2] rounded-full px-5 py-2 bg-purple-500">Gamelog</a>
+                        class="w-fit truncate text-white font-medium lg:font-bold shadow hover:scale-[1.1] rounded-full px-5 py-2 bg-purple-500">Gamelog</a>
 
 
 
                       <a href="/recharge-log.html"
-                        class="w-fit truncate text-white font-bold shadow hover:scale-[1.2] rounded-full px-5 py-2 bg-blue-500">Recharge
+                        class="w-fit truncate text-white font-medium lg:font-bold shadow hover:scale-[1.1] rounded-full px-5 py-2 bg-blue-500">Recharge
                         Log</a>
 
 
                       <a href="/withdrawal-log.html"
-                        class="w-fit truncate text-white font-bold shadow hover:scale-[1.2] rounded-full px-5 py-2 bg-green-500">Withdrawal
+                        class="w-fit truncate text-white font-medium lg:font-bold shadow hover:scale-[1.1] rounded-full px-5 py-2 bg-green-500">Withdrawal
                         Log</a>
 
                     </div>
