--- a/add-user.html
+++ b/add-user.html
@@ -438,7 +438,7 @@
                                     <li>
                                         <a href="/game-record.html"
                                             class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Game
-                                            Record
+                                            Log
                                         </a>
                                     </li>
 
@@ -490,7 +490,7 @@
                                     </li>
                                     <li>
                                         <a href="/inactive-numbers.html"
-                                            class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Inactice
+                                            class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Inactive
                                             Numbers</a>
                                     </li>
                                 </ul>
@@ -618,7 +618,6 @@
                     </div>
                 </div>
             </aside>
-
 
             <!--  Add User page -->
             <section class="p-4 md:ml-64 h-auto pt-20">
