--- a/games.html
+++ b/games.html
@@ -438,7 +438,7 @@
                                     <li>
                                         <a href="/game-record.html"
                                             class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Game
-                                            Record
+                                            Log
                                         </a>
                                     </li>
 
@@ -490,7 +490,7 @@
                                     </li>
                                     <li>
                                         <a href="/inactive-numbers.html"
-                                            class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Inactice
+                                            class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Inactive
                                             Numbers</a>
                                     </li>
                                 </ul>
@@ -619,7 +619,6 @@
                 </div>
             </aside>
 
-
             <!-- Dashboard -->
             <section class="p-4 md:ml-64 min-h-screen pt-20">
                 <div class="p-2 bg-white dark:bg-dark200 rounded-lg mb-4">
@@ -698,7 +697,7 @@
                             <div class="flex flex-col">
                                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
                                     <div
-                                        class="w-full bg-white rounded-lg shadow dark:bg-dark200 p-4 md:p-6 flex items-center gap-2 lg:gap-6 max-h-80">
+                                        class="w-full bg-white rounded-lg dark:bg-dark200 p-4 md:p-6 flex items-center gap-2 lg:gap-6 max-h-80">
                                         <div class="basis-1/3 flex justify-between">
                                             <div class="flex flex-col gap-3">
                                                 <p class="text-sm font-medium text-gray-900 dark:text-white">
@@ -724,7 +723,7 @@
                                         <div class="basis-1/7 w-full" id="area-chart-activeUsersLudo"></div>
                                     </div>
 
-                                    <div class="w-full bg-white rounded-lg shadow dark:bg-dark200 p-4 md:p-6 max-h-80">
+                                    <div class="w-full bg-white rounded-lg dark:bg-dark200 p-4 md:p-6 max-h-80">
                                         <h3
                                             class="leading-none text-base font-semibold text-gray-900 dark:text-white pb-2">
                                             Total Betting Amount
@@ -732,7 +731,7 @@
                                         <div id="line-chart-ludo"></div>
                                     </div>
 
-                                    <div class="w-full bg-white rounded-lg shadow dark:bg-dark200 p-4 md:p-6 max-h-80">
+                                    <div class="w-full bg-white rounded-lg dark:bg-dark200 p-4 md:p-6 max-h-80">
                                         <h3
                                             class="leading-none text-base font-semibold text-gray-900 dark:text-white pb-2">
                                             Total Winning
@@ -835,7 +834,7 @@
                             <div class="flex flex-col">
                                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
                                     <div
-                                        class="w-full bg-white rounded-lg shadow dark:bg-dark200 p-4 md:p-6 flex items-center gap-2 lg:gap-6 max-h-80">
+                                        class="w-full bg-white rounded-lg dark:bg-dark200 p-4 md:p-6 flex items-center gap-2 lg:gap-6 max-h-80">
                                         <div class="basis-1/3 flex justify-between">
                                             <div class="flex flex-col gap-3">
                                                 <p class="text-sm font-medium text-gray-900 dark:text-white">
@@ -861,7 +860,7 @@
                                         <div class="basis-1/7 w-full" id="area-chart-activeUsersSpin"></div>
                                     </div>
 
-                                    <div class="w-full bg-white rounded-lg shadow dark:bg-dark200 p-4 md:p-6 max-h-80">
+                                    <div class="w-full bg-white rounded-lg dark:bg-dark200 p-4 md:p-6 max-h-80">
                                         <h3
                                             class="leading-none text-base font-semibold text-gray-900 dark:text-white pb-2">
                                             Total Betting Amount
@@ -869,7 +868,7 @@
                                         <div id="line-chart-spin"></div>
                                     </div>
 
-                                    <div class="w-full bg-white rounded-lg shadow dark:bg-dark200 p-4 md:p-6 max-h-80">
+                                    <div class="w-full bg-white rounded-lg dark:bg-dark200 p-4 md:p-6 max-h-80">
                                         <h3
                                             class="leading-none text-base font-semibold text-gray-900 dark:text-white pb-2">
                                             Total Winning
@@ -974,7 +973,7 @@
                             <div class="flex flex-col">
                                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
                                     <div
-                                        class="w-full bg-white rounded-lg shadow dark:bg-dark200 p-4 md:p-6 flex items-center gap-2 lg:gap-6 max-h-80">
+                                        class="w-full bg-white rounded-lg dark:bg-dark200 p-4 md:p-6 flex items-center gap-2 lg:gap-6 max-h-80">
                                         <div class="basis-1/3 flex justify-between">
                                             <div class="flex flex-col gap-3">
                                                 <p class="text-sm font-medium text-gray-900 dark:text-white">
@@ -1000,7 +999,7 @@
                                         <div class="basis-1/7 w-full" id="area-chart-activeUsersSoccer"></div>
                                     </div>
 
-                                    <div class="w-full bg-white rounded-lg shadow dark:bg-dark200 p-4 md:p-6 max-h-80">
+                                    <div class="w-full bg-white rounded-lg dark:bg-dark200 p-4 md:p-6 max-h-80">
                                         <h3
                                             class="leading-none text-base font-semibold text-gray-900 dark:text-white pb-2">
                                             Total Betting Amount
@@ -1008,7 +1007,7 @@
                                         <div id="line-chart-soccer"></div>
                                     </div>
 
-                                    <div class="w-full bg-white rounded-lg shadow dark:bg-dark200 p-4 md:p-6 max-h-80">
+                                    <div class="w-full bg-white rounded-lg dark:bg-dark200 p-4 md:p-6 max-h-80">
                                         <h3
                                             class="leading-none text-base font-semibold text-gray-900 dark:text-white pb-2">
                                             Total Winning
@@ -1111,7 +1110,7 @@
                             <div class="flex flex-col">
                                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
                                     <div
-                                        class="w-full bg-white rounded-lg shadow dark:bg-dark200 p-4 md:p-6 flex items-center gap-2 lg:gap-6 max-h-80">
+                                        class="w-full bg-white rounded-lg dark:bg-dark200 p-4 md:p-6 flex items-center gap-2 lg:gap-6 max-h-80">
                                         <div class="basis-1/3 flex justify-between">
                                             <div class="flex flex-col gap-3">
                                                 <p class="text-sm font-medium text-gray-900 dark:text-white">
@@ -1137,7 +1136,7 @@
                                         <div class="basis-1/7 w-full" id="area-chart-activeUsersFish"></div>
                                     </div>
 
-                                    <div class="w-full bg-white rounded-lg shadow dark:bg-dark200 p-4 md:p-6 max-h-80">
+                                    <div class="w-full bg-white rounded-lg dark:bg-dark200 p-4 md:p-6 max-h-80">
                                         <h3
                                             class="leading-none text-base font-semibold text-gray-900 dark:text-white pb-2">
                                             Total Betting Amount
@@ -1145,7 +1144,7 @@
                                         <div id="line-chart-fish"></div>
                                     </div>
 
-                                    <div class="w-full bg-white rounded-lg shadow dark:bg-dark200 p-4 md:p-6 max-h-80">
+                                    <div class="w-full bg-white rounded-lg dark:bg-dark200 p-4 md:p-6 max-h-80">
                                         <h3
                                             class="leading-none text-base font-semibold text-gray-900 dark:text-white pb-2">
                                             Total Winning
