--- a/agent-model.html
+++ b/agent-model.html
@@ -708,7 +708,7 @@
                     <td class="px-6 py-4 text-gray-900 dark:text-white">
                     ${user.userid}
                     </td>
-                    <td class="px-6 py-4 text-gray-900 dark:text-white text-center">
+                    <td class="px-6 py-4 text-gray-900 dark:text-white text-center lg:text-start">
                     ${user.number_of_invites}
                     </td>
                     <td class="px-6 py-4 text-gray-900 dark:text-white">
