--- a/index.html
+++ b/index.html
@@ -624,9 +624,9 @@
           </p>
         </div>
 
-        <div class="mt-5 lg:mt-4 flex flex-col lg:items-start lg:flex-row gap-4">
+        <div class="mt-5 lg:mt-4 flex flex-col lg:items-start lg:flex-row gap-3">
           <div class="lg:basis-1/7">
-            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 mb-4">
+            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-3 mb-4">
               <div class="flex flex-col bg-white dark:bg-dark200 p-4 -lg rounded-lg max-h-80 h-full">
                 <h3 class="leading-none text-sm lg:text-base font-semibold text-gray-900 dark:text-white pb-4">
                   Total Recharge
@@ -647,13 +647,13 @@
                 </div>
               </div>
 
-              <div class="w-full bg-white rounded-lg  dark:bg-dark200 p-4 md:p-6 relative max-h-80">
+              <div class="w-full bg-white rounded-lg  dark:bg-dark200 p-4 md:p-6 relative max-h-80 h-full">
                 <h3 class="leading-none text-sm lg:text-base font-semibold text-gray-900 dark:text-white pb-2">
                   Total Registered
                 </h3>
                 <div id="area-chart-totalRegistered"></div>
                 <div
-                  class="flex items-center justify-end px-2.5 py-0.5 text-sm font-semibold text-green-500 dark:text-green-500 absolute bottom-2 lg:bottom-0 right-2">
+                  class="flex items-center justify-end px-2.5 py-0.5 text-sm font-semibold text-green-500 dark:text-green-500 absolute bottom-2  right-2">
                   +15,000 more
                   <svg class="w-3 h-3 ms-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
                     viewBox="0 0 10 14">
@@ -663,13 +663,13 @@
                 </div>
               </div>
 
-              <div class="w-full bg-white rounded-lg  dark:bg-dark200 p-4 md:p-6 max-h-80 relative">
+              <div class="w-full bg-white rounded-lg  dark:bg-dark200 p-4 md:p-6 max-h-80 h-full relative">
                 <h3 class="leading-none text-sm lg:text-base font-semibold text-gray-900 dark:text-white pb-2">
                   Total Games Played
                 </h3>
                 <div id="area-chart-totalProjects"></div>
                 <div
-                  class="flex items-center justify-end px-2.5 py-0.5 text-sm font-semibold text-green-500 dark:text-green-500 absolute bottom-2 lg:bottom-0 right-2">
+                  class="flex items-center justify-end px-2.5 py-0.5 text-sm font-semibold text-green-500 dark:text-green-500 absolute bottom-2  right-2">
                   +15,000 more
                   <svg class="w-3 h-3 ms-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
                     viewBox="0 0 10 14">
@@ -679,15 +679,15 @@
                 </div>
               </div>
 
-              <div class="w-full bg-white rounded-lg  dark:bg-dark200 p-4 md:p-6 h-60">
+              <div class="w-full bg-white rounded-lg  dark:bg-dark200 p-4 md:p-6 h-60 max-h-80 h-full">
                 <p class="text-sm lg:text-base font-semibold text-gray-900 dark:text-white mb-3">
                   Users
                 </p>
-                <div class="flex items-center max-w-sm">
+                <div class="flex items-center">
                   <div class="basis-1/3 flex justify-between">
                     <div class="space-y-3">
                       <span
-                        class="leading-none text-xl lg:text-2xl font-semibold text-gray-900 dark:text-white pb-2 truncate">
+                        class="leading-none text-base lg:text-xl font-semibold lg:font-bold text-gray-900 dark:text-white pb-2 truncate">
                         3,000
                       </span>
                       <div
@@ -701,10 +701,10 @@
                       </div>
                     </div>
                   </div>
-                  <div class="basis-1/7 ms-3 w-full max-w-sm" id="area-chart-users"></div>
+                  <div class="basis-1/7 ms-3 w-full" id="area-chart-users"></div>
                 </div>
               </div>
-              <div class="w-full bg-white rounded-lg  dark:bg-dark200 p-4 md:p-6 h-60">
+              <div class="w-full bg-white rounded-lg dark:bg-dark200 p-4 md:p-6 h-60 max-h-80 h-full">
                 <p class="text-sm lg:text-base font-semibold text-gray-900 dark:text-white mb-3">
                   Active Users
                 </p>
@@ -712,7 +712,7 @@
                   <div class="basis-1/3 flex justify-between">
                     <div class="space-y-3">
                       <h5
-                        class="leading-none text-xl lg:text-2xl font-semibold text-gray-900 dark:text-white pb-2 truncate">
+                        class="leading-none text-base lg:text-xl font-semibold lg:font-bold text-gray-900 dark:text-white pb-2 truncate">
                         30
                       </h5>
                       <div
@@ -726,11 +726,10 @@
                       </div>
                     </div>
                   </div>
-                  <div class="basis-1/7 w-full" id="area-chart-activeUsers"></div>
+                  <div class="basis-1/7 ms-3" id="area-chart-activeUsers"></div>
                 </div>
               </div>
-
-              <div class="w-full bg-white rounded-lg  dark:bg-dark200 p-4 md:p-6 h-60">
+              <div class="w-full bg-white rounded-lg dark:bg-dark200 p-4 md:p-6 h-60 max-h-80 h-full">
                 <p class="text-sm lg:text-base font-semibold text-gray-900 dark:text-white mb-3">
                   Offline Users
                 </p>
@@ -739,8 +738,8 @@
                   <div class="basis-1/3 flex justify-between">
                     <div class="space-y-3">
                       <h5
-                        class="leading-none text-xl lg:text-2xl font-semibold text-gray-900 dark:text-white pb-2 truncate">
-                        25
+                        class="leading-none text-base lg:text-xl font-semibold lg:font-bold text-gray-900 dark:text-white pb-2 truncate">
+                        2,500
                       </h5>
                       <div class="flex items-center text-base font-semibold text-red-500 dark:text-red-500 text-center">
                         10%
@@ -752,14 +751,14 @@
                       </div>
                     </div>
                   </div>
-                  <div class="basis-1/7 w-full" id="area-chart-offlineUsers"></div>
+                  <div class="basis-1/7 ms-3" id="area-chart-offlineUsers"></div>
 
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="lg:basis-1/3 relative overflow-y-auto  rounded-lg h-[35rem]">
+          <div class="lg:basis-1/3 relative overflow-y-auto rounded-lg h-[35rem] max-w-md">
             <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
               <thead class="text-xs text-gray-700 uppercase bg-white dark:bg-dark300 dark:text-gray-400">
                 <tr>
@@ -830,6 +829,60 @@
                       alt="loading" />
                     <div class="ps-3">
                       <div class="text-sm font-medium">Thomas Lean</div>
+                    </div>
+                  </th>
+                  <td class="px-6 py-2">
+                    <div class="flex items-center">
+                      <div class="h-2.5 w-2.5 rounded-full bg-green-500 me-2"></div>
+                      Online
+                    </div>
+                  </td>
+                </tr>
+                <tr
+                  class="bg-white border-b dark:bg-dark200 dark:border-dark100 hover:bg-gray-50 dark:hover:bg-dark500">
+                  <th scope="row"
+                    class="flex items-center px-6 py-3 font-medium text-gray-900 whitespace-nowrap dark:text-white">
+                    <img class="w-10 h-10 rounded-full object-cover object-center"
+                      src="https://res.cloudinary.com/dyvmtgjer/image/upload/v1715243152/image1_r7ytfh.png"
+                      alt="loading" />
+                    <div class="ps-3">
+                      <div class="text-sm font-medium">Jese Leos</div>
+                    </div>
+                  </th>
+                  <td class="px-6 py-2">
+                    <div class="flex items-center">
+                      <div class="h-2.5 w-2.5 rounded-full bg-green-500 me-2"></div>
+                      Online
+                    </div>
+                  </td>
+                </tr>
+                <tr
+                  class="bg-white border-b dark:bg-dark200 dark:border-dark100 hover:bg-gray-50 dark:hover:bg-dark500">
+                  <th scope="row"
+                    class="flex items-center px-6 py-3 font-medium text-gray-900 whitespace-nowrap dark:text-white">
+                    <img class="w-10 h-10 rounded-full object-cover object-center"
+                      src="https://res.cloudinary.com/dyvmtgjer/image/upload/v1715243152/image1_r7ytfh.png"
+                      alt="loading" />
+                    <div class="ps-3">
+                      <div class="text-sm font-medium">Jese Leos</div>
+                    </div>
+                  </th>
+                  <td class="px-6 py-2">
+                    <div class="flex items-center">
+                      <div class="h-2.5 w-2.5 rounded-full bg-green-500 me-2"></div>
+                      Online
+                    </div>
+                  </td>
+                </tr>
+                <tr
+                  class="bg-white border-b dark:bg-dark200 dark:border-dark100 hover:bg-gray-50 dark:hover:bg-dark500">
+                  <th scope="row"
+                    class="flex items-center px-6 py-3 font-medium text-gray-900 whitespace-nowrap dark:text-white">
+                    <img class="w-10 h-10 rounded-full object-cover object-center"
+                      src="https://res.cloudinary.com/dyvmtgjer/image/upload/v1715243152/image1_r7ytfh.png"
+                      alt="loading" />
+                    <div class="ps-3">
+                      <div class="text-sm font-medium">Jese Leos</div>
                     </div>
                   </th>
                   <td class="px-6 py-2">
